tests/invalid/import_inside_except/main.py
def main() -> None:
    try:
        x: int = 1
    except Exception:
        import imports.module_a
